# vocabulary

./: .pre-commit-config.yaml  LICENSE  README.md  makefile  pyproject.toml
.github/workflows/: checks-pipeline.yml  linting.yml  test.yml
examples/: credit_score.toml
test/: __init__.py  test_add.py  test_parser.py
vocabulary/: types.py
vocabulary/utils/: check_type.py  exception.py
vocabulary/voc_parser/: constants.py  functions.py  parser.py  types.py
